# crypto-accumulator

./: .gitignore  .tool-versions  Cargo.toml  README.md  accumulator-go  checksum-Elixir.CryptoAccumulator.Native.exs  go.mod  mix.exs
.github/workflows/: release.yml
lib/: crypto_accumulator.ex
lib/crypto_accumulator/: native.ex
native/crypto_accumulator/: .gitignore  Cargo.toml  README.md
native/crypto_accumulator/src/: lib.rs
src/: accumulator.rs  keys.rs  lib.rs  main.rs  proof.rs  witness.rs
test/: crypto_accumulator_test.exs
