[package]
name = "crypto-accumulator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
ark-bls12-381 = "0.4.0"  # BLS12-381 implementation
ark-ec = "0.4.0"         # Elliptic curve traits
ark-ff = "0.4.0"        # Finite field operations
ark-serialize = "0.4.0"  # Serialization traits
sha2 = "0.10.8"         # For hashing
rand = "0.8.5"          # For random number generation
